<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AsthmaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" >

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="הושב אתת האדם בתנוחה שתקל עליו את הנשימה וסייע לו בלקיחת תרופה"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="בזמן התקף אסטמה השרירים בדרכי האויר הופכים להיות מוצרים ומקשים על הנשימה שימוש במשאף יעודי מרפה את השרירים מאפשר לדרכי האויר להתרחב ומקל על המטופל  " />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="הרגע את האדם אם ההתקף מחמיר אן אם אין ברשותו משאף או השימוש בו איננו מסייע הזעק את מדא חייג 101 או בקש ממישהו אחר לעשות זאת "
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="התקף שאיננו חמור אמור לחלוף בתוך מספר דקות אם איננו חולף או שהשימוש במשאף אינו עוזר הזעק את מדא" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="שאלות ותשובות"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="מהי אסטמה"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/אסטמה_היא_מצב" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/ממה_עלי_לעשות"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:text="@string/מצא_כיצד_לסייע" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="227dp"
            android:layout_height="124dp"
            app:srcCompat="@drawable/astma"
            android:contentDescription="@string/astma" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>